--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angularfire2": "^5.0.2",
     "b64-to-blob": "^1.2.19",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.4",
     "font-awesome": "^4.7.0",
